<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChildrenSW</string>
    <string name="hello_world">Hello world!</string>
    <string name="image"></string>
    <string name="denunciar">Denunciar</string>
    <string name="informacion">Información</string>
    <string name="preguntas">Preguntas</string>
    <string name="registro">Registro</string>
    <string name="Indicadores">Indicadores</string>
    <string name="back">Atrás</string>
    <string name="title">Title</string>
    <string name="tomaimagen">Tome una imagen solo si es seguro</string>
    <string name="description">Descripción</string>
    <string name="desc">Sea concreto y asegúrece que la información sea verídica</string>
    <string name="repitpass">repetir contraseña</string>
    <string name="pass">contraseña</string>
    <string name="myemail">example@gmail.com</string>
    <string name="accept">Aceptar</string>
    <string name="createby">Desarrollado por: Diego Fernando</string>
    <string name="develop">Desarrollado por:</string>
    <string name="yoo">Diego Serna</string>
    <string name="version">Version 1.0.0</string>
    <string name="mycorreo">ciberscanner@gmail.com</string>
    <string name="numrepo">&lt; Número de reportes ></string>
    <string name="selcat">Seleccione la categoría que lo identifique</string>

</resources>
